--- a/templates/cells/post.html
+++ b/templates/cells/post.html
@@ -1,5 +1,5 @@
 <div class="innerPost">
-  <div class="postInfo title">
+  <div class="postInfo">
     <input
       type="checkbox"
       class="deletionCheckBox">
