--- a/templates/cells/op.html
+++ b/templates/cells/op.html
@@ -1,7 +1,7 @@
 <hr />
 <div class="innerOP">
   <div class="panelUploads opUploadPanel"></div>
-  <div class="opHead title">
+  <div class="opHead">
     <input
       type="checkbox"
       class="deletionCheckBox">
