--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -54,7 +54,7 @@
 
   <header class="boardHeader">
     <img id="bannerImage" />
-    <p id="labelName"></p>
+    <h1 id="labelName"></h1>
     <p id="labelDescription"></p>
   </header>
 
