--- a/static/css/threadPage.css
+++ b/static/css/threadPage.css
@@ -119,7 +119,7 @@
 }
 
 #quick-reply table {
-  background: #1D1F21;
+  background-image: url('/.static/jungle_td.png');
   padding: 0.25em;
   margin: 0;
   width: 100%;
