--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -58,174 +58,171 @@
     <p id="labelDescription"></p>
   </header>
 
-  <div id="postingForm">
+  <div id="postingFormWrapper">
 
-    <fieldset id="newPostFieldset">
-      <legend>Mode: Thread</legend>
+    <form
+      class="form-post"
+      action="/newThread.js"
+      enctype="multipart/form-data"
+      method="post">
 
-      <form
-        class="form-post"
-        action="/newThread.js"
-        enctype="multipart/form-data"
-        method="post">
+      <table id="postingForm">
+        <tbody>
+          <tr id="divName">
+            <th>Name</th>
+            <td><input
+                type="text"
+                size="25"
+                id="fieldName"
+                name="name"></td>
+          </tr>
+          <tr>
+            <th>E-mail</th>
+            <td><input
+                size="25"
+                type="text"
+                id="fieldEmail"
+                name="email"></td>
+          </tr>
+          <tr>
+            <th>Subject</th>
+            <td><input
+                type="text"
+                size="25"
+                id="fieldSubject"
+                name="subject">
 
-        <div id="postBox">
+              <button
+                type="submit"
+                id="formButton">Post</button>
 
-          <div
-            id="divName"
-            class="wider">
-            <input
-              type="text"
-              id="fieldName"
-              name="name"
-              placeholder="Name"
-              class="text">
-          </div>
+              <button
+                type="button"
+                onClick="postThread()"
+                id="jsButton"
+                class="hidden">Post</button></td>
+          </tr>
+          <tr>
+            <th>Message*</th>
+            <td><textarea
+                rows="5"
+                cols="35"
+                id="fieldMessage"
+                name="message"></textarea> <input
+                type="hidden"
+                name="boardUri"
+                id="boardIdentifier">
 
-          <div class="wider">
-            <input
-              type="text"
-              id="fieldEmail"
-              name="email"
-              class="text"
-              placeholder="E-mail">
-          </div>
+              <p class="small">
+                Remember to follow the
+                <a
+                  href="rules.html"
+                  class="rules">rules</a>
+              </p>
+              <p class="small">
+                Max message length: <span id="labelMessageLength"></span>
+              </p></td>
+          </tr>
+          <tr>
+            <th>Password</th>
+            <td><input
+                size="12"
+                type="text"
+                id="fieldPostingPassword"
+                name="password"> <span class="small">(used to
+                delete files and postings)</span></td>
+          </tr>
+          <tr id="flagsDiv">
+            <th>Flag</th>
+            <td><select
+                name="flag"
+                id="flagCombobox"></select></td>
+          </tr>
 
-          <div class="wider">
-            <input
-              type="text"
-              id="fieldSubject"
-              name="subject"
-              class="text"
-              placeholder="Subject">
-          </div>
+          <tr id="divUpload">
+            <th>Files</th>
 
-          <div>
-            <textarea
-              id="fieldMessage"
-              name="message"
-              class="text"
-              placeholder="Message"></textarea>
-          </div>
+            <td>
 
-          <div class="wider">
-            <input
-              type="text"
-              name="password"
-              id="fieldPostingPassword"
-              class="text"
-              placeholder="Password">
-          </div>
-          <div id="flagsDiv">
-            <select
-              name="flag"
-              id="flagCombobox">
-            </select>
-          </div>
-
-          <div id="divUpload">
-
-            <div
-              class="hidden"
-              id="dragAndDropDiv">
               <div
-                class="dropzone"
-                id="dropzone">
-                Drag files to upload or
-                <br>
-                click here to select them
+                class="hidden"
+                id="dragAndDropDiv">
+                <div
+                  class="dropzone"
+                  id="dropzone">
+                  Drag files to upload or
+                  <br>
+                  click here to select them
+                </div>
+                <div id="selectedDiv"></div>
               </div>
-              <div id="selectedDiv"></div>
-            </div>
 
-            <div>
-              <input
-                type="file"
-                name="files"
-                id="files"
-                multiple
-                class="fileBrowser">
-            </div>
+              <div>
+                <input
+                  type="file"
+                  name="files"
+                  id="files"
+                  multiple
+                  class="fileBrowser">
+              </div>
 
-            <div>
-              <input
-                type="checkbox"
-                name="spoiler"
-                id="checkboxSpoiler">
+              <div>
+                <input
+                  type="checkbox"
+                  name="spoiler"
+                  id="checkboxSpoiler">
 
-              <label for="checkboxSpoiler">Spoiler</label>
-            </div>
+                <label for="checkboxSpoiler">Spoiler</label>
+              </div>
 
-            <p class="small">
-              Max file size: <span id="labelMaxFileSize"></span>
-            </p>
-            <p class="small">
-              Max files: <span id="labelMaxFiles"></span>
-            </p>
-          </div>
+              <p class="small">
+                Max file size: <span id="labelMaxFileSize"></span>
+              </p>
+              <p class="small">
+                Max files: <span id="labelMaxFiles"></span>
+              </p>
 
-        </div>
 
-        <div id="captchaDiv">
+            </td>
 
-          <img
-            class="captchaImage"
-            src="/captcha.js"
-            id="captchaImage" />
+          </tr>
 
-          <div class="subCaptchaDiv">
-            <input
-              type="button"
-              onClick="reloadCaptcha()"
-              value="Reload"
-              id="reloadCaptchaButton"
-              class="hidden">
-            <span class="captchaTimer"></span>
-            <br>
+          <tr id="captchaDiv">
+            <th>Captcha</th>
 
-            <input
-              name="captcha"
-              type="text"
-              class="captchaField"
-              id="fieldCaptcha"
-              placeholder="answer">
+            <td><img
+              class="captchaImage"
+              src="/captcha.js"
+              id="captchaImage" />
 
-            <a
-              href="/noCookieCaptcha.js"
-              class="small">no cookies?</a>
+              <div class="subCaptchaDiv">
+                <input
+                  type="button"
+                  onClick="reloadCaptcha()"
+                  value="Reload"
+                  id="reloadCaptchaButton"
+                  class="hidden">
+                <span class="captchaTimer"></span>
+                <br>
 
-          </div>
+                <input
+                  name="captcha"
+                  type="text"
+                  class="captchaField"
+                  id="fieldCaptcha"
+                  placeholder="answer">
 
-        </div>
+                <a
+                  href="/noCookieCaptcha.js"
+                  class="small">no cookies?</a>
 
-        <button
-          type="submit"
-          id="formButton">Post</button>
+              </div></td>
+          </tr>
 
-        <button
-          type="button"
-          onClick="postThread()"
-          id="jsButton"
-          class="hidden">Post</button>
 
-        <input
-          type="hidden"
-          name="boardUri"
-          id="boardIdentifier">
-
-        <p class="small">
-          Remember to follow the
-          <a
-            href="rules.html"
-            class="rules">rules</a>
-        </p>
-        <p class="small">
-          Max message length: <span id="labelMessageLength"></span>
-        </p>
-
-      </form>
-
-    </fieldset>
+        </tbody>
+      </table>
+    </form>
 
   </div>
 
