--- a/templates/pages/catalog.html
+++ b/templates/pages/catalog.html
@@ -52,197 +52,205 @@
       id="labelBoard"></a>
   </p>
 
+  <div
+    id="postingForm"
+    class="postingFormWrapper">
 
-  <div id="postingForm">
     <button
       id="togglePosting"
       class="hidden">Post thread</button>
-    <fieldset id="newPostFieldset">
-      <legend>Mode: Thread</legend>
 
-      <form
-        class="form-post"
-        action="/newThread.js"
-        enctype="multipart/form-data"
-        method="post">
+    <form
+      id="innerPostingForm"
+      class="form-post"
+      action="/newThread.js"
+      enctype="multipart/form-data"
+      method="post">
 
-        <div id="postBox">
+      <table>
+        <tbody>
+          <tr id="divName">
+            <th>Name</th>
+            <td>
+              <input
+                type="text"
+                size="25"
+                id="fieldName"
+                name="name">
+            </td>
+          </tr>
+          <tr>
+            <th>E-mail</th>
+            <td>
+              <input
+                size="25"
+                type="text"
+                id="fieldEmail"
+                name="email">
+            </td>
+          </tr>
+          <tr>
+            <th>Subject</th>
+            <td>
+              <input
+                type="text"
+                size="25"
+                id="fieldSubject"
+                name="subject">
 
-          <div
-            id="divName"
-            class="wider">
-            <input
-              type="text"
-              id="fieldName"
-              name="name"
-              placeholder="Name">
-          </div>
+              <button
+                type="submit"
+                id="formButton">Post</button>
 
-          <div class="wider">
-            <input
-              type="text"
-              id="fieldEmail"
-              name="email"
-              placeholder="E-mail">
-          </div>
+              <button
+                type="button"
+                onClick="postThread()"
+                id="jsButton"
+                class="hidden">Post</button>
+            </td>
+          </tr>
+          <tr>
+            <th>Message*</th>
+            <td>
+              <textarea
+                rows="5"
+                cols="35"
+                id="fieldMessage"
+                name="message"></textarea>
+              <input
+                type="hidden"
+                name="boardUri"
+                id="boardIdentifier">
+              <input
+                name="threadId"
+                id="threadIdentifier"
+                type="hidden">
 
-          <div class="wider">
-            <input
-              type="text"
-              id="fieldSubject"
-              name="subject"
-              placeholder="Subject">
-          </div>
+              <p class="small">
+                Remember to follow the
+                <a
+                  href="rules.html"
+                  class="rules">rules</a>
+              </p>
+              <p class="small">
+                Max message length: <span id="labelMessageLength"></span>
+              </p>
+            </td>
+          </tr>
+          <tr>
+            <th>Password</th>
+            <td>
+              <input
+                size="12"
+                type="text"
+                id="fieldPostingPassword"
+                name="password">
+              <span class="small">(used to delete files and postings)</span>
 
-          <div>
-            <textarea
-              id="fieldMessage"
-              name="message"
-              placeholder="Message"></textarea>
-          </div>
-
-          <div class="wider">
-
-            <input
-              type="text"
-              name="password"
-              id="fieldPostingPassword"
-              placeholder="Password">
-          </div>
-
-          <div
-            id="noFlagDiv"
-            class="centered">
-            <input
-              type="checkbox"
-              class="postingCheckbox"
-              id="checkboxNoFlag"
-              name="noFlag">
-            <label for="checkboxNoFlag">Don't show location</label>
-          </div>
-
-          <div
-            id="alwaysUseBypassDiv"
-            class="centered"
-            style="display: hidden;">
-            <input
-              type="checkbox"
-              class="postingCheckbox"
-              id="alwaysUseBypassCheckBox">
-            <label for="alwaysUseBypassCheckBox">Make sure I have a
-              block bypass</label>
-          </div>
-
-          <div id="flagsDiv">
-            <select
-              name="flag"
-              id="flagCombobox">
-            </select>
-          </div>
-
-          <div id="divUpload">
-            <div
-              class="hidden"
-              id="dragAndDropDiv">
-              <div
-                class="dropzone"
-                id="dropzone">
-                Drag files to upload or
-                <br>
-                click here to select them
+              <div id="noFlagDiv">
+                <input
+                  type="checkbox"
+                  id="checkboxNoFlag"
+                  name="noFlag">
+                <label for="checkboxSpoiler">Don't show location</label>
               </div>
-              <div id="selectedDiv"></div>
-            </div>
+            </td>
+          </tr>
+          <tr id="flagsDiv">
+            <th>Flag</th>
+            <td>
+              <select
+                name="flag"
+                id="flagCombobox"></select>
+            </td>
+          </tr>
 
-            <div>
-              <input
-                type="file"
-                name="files"
-                id="files"
-                multiple
-                class="fileBrowser">
-            </div>
+          <tr id="divUpload">
+            <th>Files</th>
 
-            <div>
-              <input
-                type="checkbox"
-                name="spoiler"
-                class="postingCheckbox"
-                id="checkboxSpoiler">
+            <td>
 
-              <label for="checkboxSpoiler">Spoiler</label>
-            </div>
+              <div
+                class="hidden"
+                id="dragAndDropDiv">
+                <div
+                  class="dropzone"
+                  id="dropzone">
+                  Drag files to upload or
+                  <br>
+                  click here to select them
+                </div>
+                <div id="selectedDiv"></div>
+              </div>
 
-            <p class="small">
-              Max file size: <span id="labelMaxFileSize"></span>
-            </p>
-            <p class="small">
-              Max files: <span id="labelMaxFiles"></span>
-            </p>
-          </div>
+              <div>
+                <input
+                  type="file"
+                  name="files"
+                  id="files"
+                  multiple
+                  class="fileBrowser">
+              </div>
 
-        </div>
+              <div>
+                <input
+                  type="checkbox"
+                  name="spoiler"
+                  id="checkboxSpoiler">
 
-        <div id="captchaDiv">
+                <label for="checkboxSpoiler">Spoiler</label>
+              </div>
 
-          <img
-            class="captchaImage"
-            src="/captcha.js"
-            id="captchaImage" />
+              <p class="small">
+                Max file size: <span id="labelMaxFileSize"></span>
+              </p>
+              <p class="small">
+                Max files: <span id="labelMaxFiles"></span>
+              </p>
 
-          <div class="subCaptchaDiv">
-            <input
-              type="button"
-              onClick="reloadCaptcha()"
-              value="Reload"
-              id="reloadCaptchaButton"
-              class="hidden">
-            <span class="captchaTimer"></span>
-            <br>
 
-            <input
-              name="captcha"
-              type="text"
-              class="captchaField"
-              id="fieldCaptcha"
-              placeholder="answer">
+            </td>
 
-            <a
-              href="/noCookieCaptcha.js"
-              class="small">no cookies?</a>
+          </tr>
 
-          </div>
+          <tr id="captchaDiv">
+            <th>Captcha</th>
 
-        </div>
+            <td>
+              <img
+                class="captchaImage"
+                src="/captcha.js"
+                id="captchaImage" />
 
-        <button
-          type="submit"
-          id="formButton">Post</button>
+              <div class="subCaptchaDiv">
+                <input
+                  type="button"
+                  onClick="reloadCaptcha()"
+                  value="Reload"
+                  id="reloadCaptchaButton"
+                  class="hidden">
+                <span class="captchaTimer"></span>
+                <br>
 
-        <button
-          type="button"
-          onClick="postThread()"
-          id="jsButton"
-          class="hidden">Post</button>
+                <input
+                  name="captcha"
+                  type="text"
+                  class="captchaField"
+                  id="fieldCaptcha"
+                  placeholder="answer">
 
-        <input
-          type="hidden"
-          name="boardUri"
-          id="boardIdentifier">
+                <a
+                  href="/noCookieCaptcha.js"
+                  class="small">no cookies?</a>
 
-        <p class="small">
-          Remember to follow the
-          <a
-            href="rules.html"
-            class="rules">rules</a>
-        </p>
-        <p class="small">
-          Max message length: <span id="labelMessageLength"></span>
-        </p>
+              </div>
+            </td>
+          </tr>
 
-      </form>
+        </tbody>
+      </table>
 
-    </fieldset>
+    </form>
 
   </div>
 
@@ -280,7 +288,7 @@
 <script src="/.static/js/settings.js"></script>
 <script src="/.static/js/api.js"></script>
 <script src="/.static/js/crypt.js"></script>
-<script src="/.static/js/postCommon.js"></script>
+<script src="/.static/js/upload.js"></script>
 <script src="/.static/js/board.js"></script>
 <script src="/.static/js/captcha.js"></script>
 <script src="/.static/js/catalog.js"></script>
