--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -50,7 +50,7 @@
     <div
       id="infoBox"
       class="title">
-      <p>Insert title here</p>
+      <p>Mewch Imageboard</p>
     </div>
 
     <div
@@ -109,9 +109,6 @@
 
   </div>
 
-  <footer>
-    <span>Insert footer here</span>
-  </footer>
 
 </body>
 
