--- a/static/css/boardContent.css
+++ b/static/css/boardContent.css
@@ -1,4 +1,20 @@
 /*Elements shown on board and thread pages*/
+.postingFormWrapper {
+  text-align: center;
+  width: 100%;
+}
+
+#postingForm {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+}
+
+#postingForm td {
+  padding-left: 5px;
+  text-align: left;
+}
+
 .selectedCell, .dropzone {
   top: 5px;
   text-align: center;
@@ -8,6 +24,14 @@
 
 .selectedCell {
   margin-top: 10px;
+  display: inline-block;
+  height: 200px;
+  width: 200px;
+  overflow: hidden;
+}
+
+.dropzone, .selectedCell {
+  font-size: 10pt;
 }
 
 .dropzone {
@@ -32,17 +56,13 @@
   color: #7D7D7D;
 }
 
-#panelMessage {
-  margin: 1em;
-}
-
 #postBox div.wider input, #flagsDiv, #flagsDiv select {
   width: 100%;
   margin-bottom: 0.25em;
 }
 
-#flagsDiv {
-  margin-top: 0.5em;
+#flagsDiv, #flagsDiv select {
+  width: 100%;
 }
 
 #postBox textarea {
@@ -60,15 +80,6 @@
   width: 25em;
 }
 
-#newPostFieldset, #quick-reply table {
-  border: 1px dashed #117743;
-}
-
-#postingForm {
-  text-align: center;
-  margin: 1em auto;
-}
-
 #postBox {
   text-align: left;
 }
@@ -77,45 +88,20 @@
   margin-top: 0.5em;
 }
 
-#postBox input:focus, #postBox textarea:focus {
-  box-shadow: 0px 0px 5px 2px #117743;
-}
 
-#postingForm button, #qrbutton {
+#qrbutton {
   width: 8em;
   margin: 0.5em auto;
   font-size: 125%;
-}
-
-#postingForm button:active {
-  box-shadow: 0px 0px 5px #117743;
 }
 
 #postingForm label {
   font-size: 80%;
 }
 
-input[type=checkbox].postingCheckbox {
-  display: none;
-}
-
-input[type=checkbox].postingCheckbox+label:before {
-  font-family: Icons;
-  content: "\e0db";
-  margin-right: 0.5em;
-  color: #117743;
-  display: inline-block;
-}
-
-input[type=checkbox].postingCheckbox:checked+label:before {
-  font-family: Icons;
-  content: "\e033";
-  margin-right: 0.5em;
-  color: #117743;
-  display: inline-block;
-}
-
 #boardContentLinks {
   margin-top: 0.5em;
   font-size: 80%;
 }
+
+
