--- a/static/css/catalog.css
+++ b/static/css/catalog.css
@@ -17,10 +17,10 @@
   height: 14em;
   overflow: hidden;
   overflow-y: auto;
-  background: #282A2E;
+  background: rgba(182, 182, 182, 0.12);
   margin: 0.1em;
-  border: 1px solid #117743;
-  border-radius: 5px;
+  border: 2px solid
+  rgba(111,111,111,0.34)
 }
 
 .catalogLabel {
