--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,8 +1,16 @@
+#hiddenboxes {
+  display:none;
+}
 .small {
   font-size: 75%;
   text-decoration: none;
 }
-
+#logoBox {
+  width: 100%;
+  margin: 0 auto 1em auto;
+  text-align: center;
+  padding-top: 20px;
+}
 .clearer {
   clear: both;
 }
@@ -10,7 +18,28 @@
 .small a {
   text-decoration: none;
 }
-
+#postingForm button, #qrbutton {
+    width: 8em;
+    margin: 0.5em auto;
+    font-size: 100%;
+    border: 1px solid #AAAAAA;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    padding: 2px 10px 2px 10px;
+    text-decoration: none;
+    display: inline-block;
+    text-shadow: 0px 0px 0 rgba(0,0,0,0.3);
+    color: #030303;
+    background-color: #f4f5f5;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f4f5f5), to(#dfdddd));
+    background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
+    background-image: -moz-linear-gradient(top, #f4f5f5, #dfdddd);
+    background-image: -ms-linear-gradient(top, #f4f5f5, #dfdddd);
+    background-image: -o-linear-gradient(top, #f4f5f5, #dfdddd);
+    background-image: linear-gradient(to bottom, #f4f5f5, #dfdddd);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f4f5f5, endColorstr=#dfdddd);
+}
 .imgLink img, .latestImageCell img, .mediaCell img, .catalogCell img {
   image-orientation: from-image;
 }
@@ -23,23 +52,7 @@ h3, p, label {
   margin: 0.25em 0;
 }
 
-hr {
-  height: 0px;
-  border-width: 1px medium medium;
-  border-style: solid none none;
-  border-color: #117743;
-}
 
-a, .navClickable {
-  color: #FFB300;
-  text-decoration: none;
-}
-
-a:hover, .hideButton:hover, .unhideButton:hover, .embedButton:hover,
-  .navClickable:hover, #closeWatcherMenuButton:hover, .watchButton:hover,
-  .watchedCellCloseButton:hover, .hideFileButton:hover {
-  text-shadow: 0px 0px 5px #117743;
-}
 
 .navClickable, .watchButton {
   cursor: pointer
@@ -61,34 +74,19 @@ em {
   font-style: italic;
 }
 
-input, select, textarea {
-  border: 1px double #07371F;
-  border-radius: 5px;
-  background: #282A2E;
-  color: #ACACAC;
-  font-family: 'Hack', monospace, sans-serif;
-  font-size: 80%;
-}
-
-input[type=button], input[type=submit], button, .dropzone, .selectedCell
-  {
-  border: 3px double #07371F;
-  border-radius: 5px;
-  background: #16171A;
-  color: #ACACAC;
-  padding-left: 0.25em;
-  font-family: 'Hack', monospace, sans-serif;
-  font-size: 80%;
-  font-weight: bold;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-  cursor: pointer;
-}
-
 .title, .unhideButton {
   font-weight: bold;
 }
 
+.title, #labelBoard, .boardHeader p#labelName {
+  font-size: 20pt;
+  font-weight: bold;
+}
+.subTitle, .boardHeader p#labelDescription {
+  font-size: 8pt;
+}
+
+}
 .fileBrowser {
   background: none;
 }
@@ -119,13 +117,6 @@ input[type=button], input[type=submit], button, .dropzone, .selectedCell
 }
 
 /* body styles, inherited by whole page */
-body {
-  color: #ACACAC;
-  background: #1D1F21;
-  font-family: 'Hack', monospace, sans-serif;
-  font-size: 100%;
-  margin: 0px;
-}
 
 /* header and nav / top of page styles */
 header {
@@ -138,8 +129,7 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #151515;
-  border-bottom: 1px solid #B0790A;
+  background-color: #193447;
   padding-bottom: 3px;
   font-size: 70%;
   text-align: center;
@@ -228,7 +218,6 @@ a.rules:after {
   font-family: Icons;
   content: "\e052";
   margin-right: 0.5em;
-  color: #117743;
   height: 80%;
   font-size: 80%;
   padding-left: 0.25em;
@@ -236,6 +225,50 @@ a.rules:after {
 }
 
 /* markdown */
+.cow {
+    animation: rainbold 1s linear infinite;
+    color: red;
+    font-size: 1.5em;
+/*  letter-spacing: 0.33em; */
+    margin-left: 6px;
+    text-shadow: -1px 0px orange, -2px 0px yellow, -3px 0px green, -4px 0px blue, -5px 0px indigo, -6px 0px violet;
+
+}
+
+
+@keyframes rainbold {
+    0% { color: red; text-shadow: -1px 0px orange, -2px 0px yellow, -3px 0px green, -4px 0px blue, -5px 0px indigo, -6px 0px violet; }
+  14% { color: orange; text-shadow: -1px 0px yellow, -2px 0px green, -3px 0px blue, -4px 0px indigo, -5px 0px violet, -6px 0px red; }
+  28% { color: yellow; text-shadow: -1px 0px green, -2px 0px blue, -3px 0px indigo, -4px 0px violet, -5px 0px red, -6px 0px orange; }
+  43% { color: green; text-shadow: -1px 0px blue, -2px 0px indigo, -3px 0px violet, -4px 0px red, -5px 0px orange, -6px 0px yellow; }
+  57% { color: blue; text-shadow: -1px 0px indigo, -2px 0px violet, -3px 0px red, -4px 0px orange, -5px 0px yellow, -6px 0px green; }
+  71% { color: indigo; text-shadow: -1px 0px violet, -2px 0px red, -3px 0px orange, -4px 0px yellow, -5px 0px green, -6px 0px blue; }
+  85% { color: violet; text-shadow: -1px 0px red, -2px 0px orange, -3px 0px yellow, -4px 0px green, -5px 0px blue, -6px 0px indigo; }
+ 100% { color: red; text-shadow: -1px 0px orange, -2px 0px yellow, -3px 0px green, -4px 0px blue, -5px 0px indigo, -6px 0px violet; }
+}
+@-moz-keyframes rainbold {
+    0% { color: red; text-shadow: -1px 0px orange, -2px 0px yellow, -3px 0px green, -4px 0px blue, -5px 0px indigo, -6px 0px violet; }
+  14% { color: orange; text-shadow: -1px 0px yellow, -2px 0px green, -3px 0px blue, -4px 0px indigo, -5px 0px violet, -6px 0px red; }
+  28% { color: yellow; text-shadow: -1px 0px green, -2px 0px blue, -3px 0px indigo, -4px 0px violet, -5px 0px red, -6px 0px orange; }
+  43% { color: green; text-shadow: -1px 0px blue, -2px 0px indigo, -3px 0px violet, -4px 0px red, -5px 0px orange, -6px 0px yellow; }
+  57% { color: blue; text-shadow: -1px 0px indigo, -2px 0px violet, -3px 0px red, -4px 0px orange, -5px 0px yellow, -6px 0px green; }
+  71% { color: indigo; text-shadow: -1px 0px violet, -2px 0px red, -3px 0px orange, -4px 0px yellow, -5px 0px green, -6px 0px blue; }
+  85% { color: violet; text-shadow: -1px 0px red, -2px 0px orange, -3px 0px yellow, -4px 0px green, -5px 0px blue, -6px 0px indigo; }
+ 100% { color: red; text-shadow: -1px 0px orange, -2px 0px yellow, -3px 0px green, -4px 0px blue, -5px 0px indigo, -6px 0px violet; }
+}
+@-webkit-keyframes rainbold {
+    0% { color: red; text-shadow: -1px 0px orange, -2px 0px yellow, -3px 0px green, -4px 0px blue, -5px 0px indigo, -6px 0px violet; }
+  14% { color: orange; text-shadow: -1px 0px yellow, -2px 0px green, -3px 0px blue, -4px 0px indigo, -5px 0px violet, -6px 0px red; }
+  28% { color: yellow; text-shadow: -1px 0px green, -2px 0px blue, -3px 0px indigo, -4px 0px violet, -5px 0px red, -6px 0px orange; }
+  43% { color: green; text-shadow: -1px 0px blue, -2px 0px indigo, -3px 0px violet, -4px 0px red, -5px 0px orange, -6px 0px yellow; }
+  57% { color: blue; text-shadow: -1px 0px indigo, -2px 0px violet, -3px 0px red, -4px 0px orange, -5px 0px yellow, -6px 0px green; }
+  71% { color: indigo; text-shadow: -1px 0px violet, -2px 0px red, -3px 0px orange, -4px 0px yellow, -5px 0px green, -6px 0px blue; }
+  85% { color: violet; text-shadow: -1px 0px red, -2px 0px orange, -3px 0px yellow, -4px 0px green, -5px 0px blue, -6px 0px indigo; }
+ 100% { color: red; text-shadow: -1px 0px orange, -2px 0px yellow, -3px 0px green, -4px 0px blue, -5px 0px indigo, -6px 0px violet; }
+}
+.orangeText {
+  color: #FF5733;
+}
 .greenText {
   color: #789922;
 }
@@ -269,7 +302,7 @@ span.spoiler {
 }
 
 #settingsFieldset {
-  border: 1px dashed #117743;
+  border: 1px dashed;
   padding: 1em;
   display: inline-block;
   text-align: left;
@@ -378,4 +411,288 @@ footer {
   color: black;
   margin: auto;
   display: block;
+}
+
+
+body {
+	background: #FFE4E6;
+	color: #000000;
+	font-family: arial,helvetica,sans-serif;
+}
+hr {
+	border: none;
+	border-top: 1px solid grey;
+}
+
+/* LINKS */
+a, .hideButton, .unhideButton, .embedButton, .navClickable, #closeWatcherMenuButton, .watchButton, .watchedCellCloseButton, .hideFileButton {
+	color: #34345C;
+	text-decoration: none;
+}
+a:hover, .hideButton:hover, .unhideButton:hover, .embedButton:hover, .navClickable:hover, #closeWatcherMenuButton:hover, .watchButton:hover, .watchedCellCloseButton:hover, .hideFileButton:hover {
+	color: #DD0000;
+	text-shadow: none; /* gets rid of the stupid glow effect */
+}
+
+/* BOARD TITLE */
+.boardHeader p {
+	color: #AF0A0F;
+	font-family: Tahoma,sans-serif;
+}
+.boardHeader p#labelName {
+	font-size: 28px;
+	font-weight: bold;
+}
+.boardHeader p#labelDescription {
+	font-size: 8pt;
+}
+
+/* REPLY + MAKE THREAD FIELDS */
+#newPostFieldset, #quick-reply table {
+	border: 1px dashed #B7C5D9;
+}
+input, select, textarea {
+	background: #FFFFFF;
+	border-radius: 0px;
+	border: 1px solid #AAAAAA;
+	color: #000000;
+	font-family: arial,helvetica,sans-serif;
+}
+input:hover, select:hover, textarea:hover {
+	border: 1px solid #9988EE;
+}
+
+/* BUTTON, DROPZONE, CAPTCHA */
+input[type="button"], input[type="submit"], button {
+	color: #000000;
+	font-family: arial,helvetica,sans-serif;
+}
+.dropzone, .selectedCell {
+	background: #DADCE3;
+	border: 2px dashed rgba(125, 125, 125, 0.4);
+	border-radius: 0px;
+	color: rgba(0, 0, 0, 0.5);
+	font-family: sans-serif;	/* We don't like monospace, do we? */
+	font-weight: normal;
+}
+.subCaptchaDiv {
+    text-align: center;
+}
+
+/* ANNOUNCEMENT */
+#divMessage {
+	color: #FF0000;
+	font-size: 13px;
+	font-weight: bold;
+}
+
+/* THREAD FIELDS */
+.title, .unhideButton {
+	font-weight: 400; /* makes timestamp not bold */
+}
+.labelSubject { /* subject */
+	color: #0F0C5D;
+	font-weight: bold; /* needed for catalog */
+}
+.linkName { /* email field, sage */
+	font-weight: bold;
+	color: #34345C;
+	text-decoration: underline;
+}
+.linkName:hover {
+	color: #DD0000;
+}
+.noEmailName, .noEmailName:hover { /* regular anonymous */
+	color: #117743;
+	text-decoration: none;
+	text-shadow: none;
+}
+.linkSelf, .linkQuote { /* post number */
+	color: #000000;
+}
+.linkSelf:hover, .linkQuote:hover {
+	color: #DD0000;
+}
+.panelBacklinks a { /* backlinks */
+	color: #34345C;
+}
+.panelBacklinks a:hover {
+	color: #DD0000;
+}
+.quoteLink, .quoteLink:hover { /* >> */
+	color: #D00D00;
+	text-decoration: underline;
+}
+.labelRole:before { /* capcode prefix */
+	font-size: 10px;
+}
+.labelOmission { /* posts omitted */
+	color: #707070;
+}
+.labelLastEdit { /* edited post */
+	font-size: 10px;
+}
+.labelId { /* id font */
+	font-size: 12px;
+}
+
+/* THREAD POSTS */
+.innerPost {  /* normal reply */
+	background-color: #FFCCCB;
+	border: 1px solid #FFCCCB;
+	border-left: none;
+	border-top: none;
+	border-radius: 0px;
+	padding-bottom: 0.3em;
+	overflow: initial;
+	max-width: 94%;
+}
+.markedPost { /* highlighted reply */
+	background: #D6BAD0;
+	border: 1px solid #BA9DBF;
+	border-left: none;
+	border-top: none;
+	border-radius: 0px;
+	padding-bottom: 0.3em;
+    	overflow:initial;
+    	max-width: 94%;
+}
+span.spoiler:hover { /* spoiler hover */
+	background: #000000;
+	color: #FFFFFF;
+}
+
+/* QUICK REPLY */
+#quick-reply table {
+	background-color: #FFCCCB;
+}
+#quick-reply table {
+	padding: 0em;
+}
+#quick-reply th {
+	background-color: #d4d0c8;
+}
+.post-table td {
+    padding-bottom: 0em;
+}
+
+/* NAVIGATION BAR */
+nav {
+	border-bottom: 1px solid #FFCCCB;
+	font-size: 12px;
+	margin: 0 0.2em;
+	padding-top: 1px;
+	padding-bottom: 1px;
+        background-color: #FFCCCB;
+}
+
+/* DELETE AND REPORT */
+.reportFieldset {
+	border: 1px dashed #B7C5D9;
+}
+
+/* CATALOG */
+#catalogId {
+	color: #AF0A0F;
+}
+.catalogCell {
+	background: #DDE0F0;
+	border: 1px solid #B7B9C4;
+	border-radius: 0px;
+}
+
+/* BOARD LIST */
+.boardPages {
+    color: #8899AA;
+}
+
+/* FRONT PAGE */
+#divLatestPosts .latestPostCell {
+    background: #FFCCCB;
+    border: #FFCCCB;
+}
+.divMessage {
+}
+.postInfo, .opHead, .divMessage, .panelUploads, .panelIp, .panelProxyIp, .contentOmissionIndicator, .labelOmission, .labelId {
+    color: black;
+}
+#postingForm th {
+    font-family: sans-serif !important;
+    width: 85px;
+    padding-left: 5px;
+}
+
+#postingForm td {
+   background-color: transparent;
+}
+#postingForm td {
+    text-align: left;
+    background: #FFE4E6;
+}
+
+#postingForm th {
+    background: #FFCCCB;
+    border: 0;
+    color: black;
+    font-size: 14px;
+    font-weight: normal;
+    text-align: left;
+}
+/* Watched threads menu box */
+#watchedMenu{
+	background: #FFCCCB;
+	border: 1px dashed black;
+}
+
+/* CHECKBOX ON POST FORM */
+input[type=checkbox]#checkboxSpoiler+label:before {
+  color: #6574cc;
+}
+
+/* Remove drop-shadow effect from post form, etc */
+#postBox input:focus, #postBox textarea:focus {
+  box-shadow: none;
+}
+
+
+/* I'm going to hide this for the time being. */
+/* I'll work on making it prettier later, but there's just */
+/* not much of a point in having this on *every* post */
+.hideButton {
+  display: none;
+}
+
+/* Hide weird "preview" button that really makes no sense */
+.linkPreview {
+  display: none;
+}
+
+div[id^="connection"]{
+	display: inline-block;
+    overflow: hidden;
+    max-width: 100%;
+    border: 0;
+    box-shadow: 0px 3px 14px -5px #000000;
+    background-color: #FFCCCB;
+    border: 1px solid #FFCCCB;
+    border-left: none;
+    border-top: none;
+    border-radius: 0px;
+    padding: 0.8em;
+    font-size:14px;
+}
+
+
+
+
+span.hideFileButton:before {
+font-size:12px;
+content:"⊟ ";
+}
+span.hideFileButton {
+font-size:0px;
+}
+
+a.nameLink {
+font-size:0px;
 }
