--- a/static/css/threadPage.css
+++ b/static/css/threadPage.css
@@ -117,7 +117,6 @@
 }
 
 #quick-reply table {
-  background: #1D1F21;
   padding: 0.25em;
   margin: 0;
   width: 100%;
@@ -126,4 +125,7 @@
 
 .handle, .close-btn {
   cursor: move;
+}
+#selectedDivQr .selectedCell{
+  width:90px;
 }
