--- a/templates/pages/globalManagement.html
+++ b/templates/pages/globalManagement.html
@@ -100,6 +100,12 @@
         <br>
       </a>
       <a
+        id="newsLink"
+        href="/addon.js/news?action=view">
+        News
+        <br>
+      </a>
+      <a
         id="languagesLink"
         href="/languages.js">
         Alternative languages
