Fixed bug with forced anon boards and catalog refresh. Fixed posting form hiding on catalog. Implemented mass flag upload. Implemented flag saving on post. Fixed bug with file hiding and media files.

--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -414,8 +414,8 @@
 <script src="/.static/js/settings.js"></script>
 <script src="/.static/js/api.js"></script>
 <script src="/.static/js/crypt.js"></script>
-<script src="/.static/js/upload.js"></script>
 <script src="/.static/js/board.js"></script>
+<script src="/.static/js/postCommon.js"></script>
 <script src="/.static/js/thumbs.js"></script>
 <script src="/.static/js/tooltips.js"></script>
 <script src="/.static/js/posting.js"></script>
