--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -642,8 +642,8 @@
 <script src="/.static/js/settings.js"></script>
 <script src="/.static/js/api.js"></script>
 <script src="/.static/js/crypt.js"></script>
-<script src="/.static/js/upload.js"></script>
 <script src="/.static/js/thread.js"></script>
+<script src="/.static/js/postCommon.js"></script>
 <script src="/.static/js/thumbs.js"></script>
 <script src="/.static/js/tooltips.js"></script>
 <script src="/.static/js/posting.js"></script>
