--- a/static/css/global.css
+++ b/static/css/global.css
@@ -617,7 +617,7 @@ nav {
     color: black;
 }
 #postingForm th {
-    font-family: sans-serif !important;
+    font-family: sans-serif;
     width: 85px;
     padding-left: 5px;
 }
