--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -80,6 +80,10 @@
         id="linkGlobalRules">global rules</a>
       <span>/</span>
       <a
+        href="http://qjlf6jbb5ctcbsij.onion"
+        id="linkTor">hidden service</a>
+      <span>/</span>
+      <a
         href="/.static/links.html"
         id="linkLinks">links</a>
       <span>/</span>
@@ -110,7 +114,6 @@
     </div>
 
   </div>
-
 
 </body>
 
