Added a second flag preview.

--- a/templates/pages/catalog.html
+++ b/templates/pages/catalog.html
@@ -161,7 +161,7 @@
             <td>
               <select
                 name="flag"
-                id="flagCombobox"></select>
+                id="flagCombobox"></select><img class="flagPreview">
             </td>
           </tr>
 
