--- a/static/css/boardContent.css
+++ b/static/css/boardContent.css
@@ -62,7 +62,20 @@
   color: #7D7D7D;
 }
 
-#postBox div.wider input, #flagsDiv, #flagsDiv select {
+#flagCombobox {
+  display: inline-block;
+  width: 85%;
+  margin-bottom: 0.25em;
+}
+
+.flagPreview {
+  display: inline-block;
+  max-width: 10%;
+  height: 16px;
+}
+
+#postBox div.wider input, #flagsDiv {
+
   width: 100%;
   margin-bottom: 0.25em;
 }
