--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -171,7 +171,7 @@
             <td>
               <select
                 name="flag"
-                id="flagCombobox"></select>
+                id="flagCombobox"></select><img class="flagPreview">
             </td>
           </tr>
 
