--- a/templates/pages/overboard.html
+++ b/templates/pages/overboard.html
@@ -17,6 +17,15 @@
   href="/.static/css/thread.css"
   type="text/css"
   rel="stylesheet" />
+<link
+  href="/.static/css/boardContent.css"
+  type="text/css"
+  rel="stylesheet" />
+<link
+  href="/.static/css/watcher.css"
+  type="text/css"
+  rel="stylesheet" />
+
 </head>
 <body>
 
@@ -175,8 +184,11 @@
 <script src="/.static/js/hiding.js"></script>
 <script src="/.static/js/mediaHiding.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/embed.js"></script>
 <script src="/.static/js/board.js"></script>
 <script src="/.static/js/captcha.js"></script>
+<script src="/.static/js/postingMenu.js"></script>
+<script src="/.static/js/captchaModal.js"></script>
 
 </html>
