--- a/static/css/boardContent.css
+++ b/static/css/boardContent.css
@@ -124,3 +124,54 @@ height: auto;
 #qrFlagsDiv{
 	font-size:0px;
 }
+#postBox div.wider input, #flagsDiv, .modalDecorationPanel 
+#input[type='text']
+  {
+  width: 100%;
+  margin-bottom: 0.25em;
+}
+#newPostFieldset, #quick-reply table, .modalDecorationPanel {
+  border: 1px dashed;
+}
+
+#postBox input:focus, #postBox textarea:focus, .modalDecorationPanel 
+#input[type='text']:focus
+  {
+  box-shadow: 0px 0px 5px 2px #117743;
+}
+.modalPanel {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 200;
+  display: table;
+  text-align: center;
+  background: rgba(29, 31, 33, 0.66);
+  right: 0;
+  top: 0;
+}
+
+.modalInnerPanel {
+  vertical-align: middle;
+  display: table-cell;
+}
+
+.modalDecorationPanel {
+  background: #FFCCCB;
+  padding: 10px;
+  display: inline-block;
+}
+
+.modalHeader {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.modalCaptchaControls {
+  display: block;
+  text-align: left;
+}
+
+.modalCaptchaControls input, .modalOkButton {
+  margin-right: 10px;
+}
