--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -416,6 +416,7 @@
 <script src="/.static/js/crypt.js"></script>
 <script src="/.static/js/board.js"></script>
 <script src="/.static/js/postCommon.js"></script>
+<script src="/.static/js/captchaModal.js"></script>
 <script src="/.static/js/thumbs.js"></script>
 <script src="/.static/js/tooltips.js"></script>
 <script src="/.static/js/posting.js"></script>
@@ -425,5 +426,6 @@
 <script src="/.static/js/themes.js"></script>
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/embed.js"></script>
+<script src="/.static/js/postingMenu.js"></script>
 
 </html>
