--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -644,6 +644,7 @@
 <script src="/.static/js/crypt.js"></script>
 <script src="/.static/js/thread.js"></script>
 <script src="/.static/js/postCommon.js"></script>
+<script src="/.static/js/captchaModal.js"></script>
 <script src="/.static/js/thumbs.js"></script>
 <script src="/.static/js/tooltips.js"></script>
 <script src="/.static/js/posting.js"></script>
@@ -654,5 +655,7 @@
 <script src="/.static/js/themes.js"></script>
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/embed.js"></script>
+<script src="/.static/js/thread.js"></script>
+<script src="/.static/js/postingMenu.js"></script>
 
 </html>
