Fixed small bug with the filter cell.

--- a/templates/cells/filterCell.html
+++ b/templates/cells/filterCell.html
@@ -4,9 +4,7 @@
 <p>
   Replacement term: <span class="labelReplacement"></span>
 </p>
-<p>
-  Case-insensitive:<span class="labelCaseInsensitive"></span>
-</p>
+<p class="labelCaseInsensitive">Case-insensitive</p>
 <input
   type="hidden"
   name="boardUri"
