Bans added to the postingmenu

--- a/static/css/boardContent.css
+++ b/static/css/boardContent.css
@@ -121,7 +121,10 @@ height: auto;
 }
 
 #qrFlagsDiv{
-	font-size:0px;
+  font-size:0px;
+}
+.modalDecorationPanel input[type='text'], .modalDecorationPanel{
+  display: block;
 }
 #postBox div.wider input, #flagsDiv, .modalDecorationPanel 
 #input[type='text']
