Password addon support final

--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -55,6 +55,14 @@
           name="password"
           placeholder="password">
 
+        <div id="divRemember">
+          <input
+            type="checkbox"
+            name="remember"
+            id="checkboxRemember">
+          Remember me
+        </div>
+
         <input
           type="submit"
           id="loginFormButton"
