--- a/static/css/posting.css
+++ b/static/css/posting.css
@@ -152,7 +152,7 @@
 .labelLastEdit {
   margin-top: 0.75em;
   margin-left: 0.75em;
-  font-size: 12px;
+  font-size: 80%;
 }
 
 .contentOmissionIndicator {
