Added gallery mode

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -183,6 +183,7 @@ nav a {
     font-family: Icons;
     content: "\e003";
     margin-right: 0.25em;
+    margin-left: 0.5em;
 }
 #divPages {
     display: inline-block;
