--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -657,5 +657,5 @@
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/embed.js"></script>
 <script src="/.static/js/postingMenu.js"></script>
-
+<script src="/.static/js/gallery.js"></script>
 </html>
