--- a/static/css/thread.css
+++ b/static/css/thread.css
@@ -4,6 +4,17 @@
   content: "\e08a";
   color: #A00;
 }
+#galleryLink:before {
+  font-family: Icons;
+  content: "\e02c";
+  margin-left: 0.25em;
+  margin-right: 0.5em;
+}
+
+.galleryImage {
+  max-width: 100vw;
+  max-height: 100vh;
+}
 
 .pinIndicator:after {
   font-family: Icons;
