--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -29,36 +29,36 @@
   href="/.static/css/watcher.css"
   type="text/css"
   rel="stylesheet" />
-<script src="/.static/js/megud/class.pdu.js" defer=""></script>
-<script src="/.static/js/megud/class.protocolManager.js" defer=""></script>
-<script src="/.static/js/megud/protocol.megud.js" defer=""></script>
-<script src="/.static/js/megud/megud.config.defaults.js" defer=""></script>
-<script src="/.static/js/megud/megud.lynxchan.js" defer=""></script>
-<script src="/.static/js/megud/megud.settings.js" defer=""></script>
-<script src="/.static/js/megud/megud.config.js" defer=""></script>
-<script src="/.static/js/megud/megud.js" defer=""></script>
 </head>
 <body>
 
   <nav>
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
+        class="coloredIcon"
         id="navLinkHome">home</a> <span>/</span> <a
         href="/boards.js"
+        class="coloredIcon"
         id="navBoardList">boards</a> <span>/</span> <a
         href="/overboard"
+        class="coloredIcon"
         id="navOverboard">overboard</a> <span>/</span> <a
         href="/.static/posting.html"
+        class="coloredIcon"
         id="navPosting">help</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> <span>[</span>
       <a
         href="#"
+        class="coloredIcon"
         id="linkTop"></a> <span>/</span> <a
         href="#footer"
+        class="coloredIcon"
         id="linkBottom"></a> <span>/</span> <a
         href="catalog.html"
+        class="coloredIcon"
         id="navCatalog">catalog</a> <span>/</span> <a
         href="index.rss"
+        class="coloredIcon"
         id="linkRss">rss</a> <span>]</span>
     </span>
   </nav>
