--- a/templates/pages/boards.html
+++ b/templates/pages/boards.html
@@ -19,11 +19,16 @@
   <nav>
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
+        class="coloredIcon"
         id="navLinkHome">home</a> <span>/</span> <a
         href="/boards.js"
-        id="navBoardList">boards</a> <span>/</span> <a id="linkOverboard">overboard</a>
-      <span>/</span> <a id="linkSfwOver">overboard sfw</a> <span>/</span> <a
+        class="coloredIcon"
+        id="navBoardList">boards</a> <span>/</span> <a
+        class="coloredIcon"
+        id="linkOverboard">overboard</a> <span>/</span> <a id="linkSfwOver">overboard
+        sfw</a> <span>/</span> <a
         href="/.static/posting.html"
+        class="coloredIcon"
         id="navPosting">help</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
   </nav>
